<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Sensors2OSC</string>
    <string name="action_settings">Settings</string>
    <string name="communication">Communication</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="mqtt_host">MQTT Host</string>
    <string name="mqtt_port">MQTT Port</string>
    <string name="mqtt_prefix">MQTT Topic Prefix</string>
    <string name="sensors">Sensors</string>
    <string name="sensitity">Sensitivity</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="about_copyright" translatable="false">© Thomas Mayer, Antonio Deusany de Carvalho Junior &amp; contributors 2014 - 2017, &lt;a href=&quot;http://sensors2.org/osc/&quot;>sensors2.org/osc&lt;/a>&lt;br>&lt;br>Contributors: Tal Kirshboim, naofum (Japanese translation)</string>
    <string name="about_buglinks">Please report bugs on &lt;a href=&quot;https://github.com/SensorApps/Sensors2OSC/issues&quot;>GitHub&lt;/a> or send an email to &lt;a href=&quot;mailto:osc-bugs@sensors2.org&quot;">osc-bugs@sensors2.org&lt;/a>. We will take a look at it.</string>
    <string name="about_license">License</string>
    <string name="about_mit_license_1">Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the &quot;Software&quot;), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:</string>
    <string name="about_mit_license_2">The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.</string>
    <string name="about_mit_license_3"><![CDATA[THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.]]></string>
    <string name="about_components">Used Components</string>
    <string name="about_license_javaosc">&lt;a href=&quot;http://www.illposed.com/software/javaosc.html&quot;>JavaOSC&lt;/a>, license can be found at &lt;a href=&quot;https://raw.githubusercontent.com/hoijui/JavaOSC/master/LICENSE&quot;>https://raw.githubusercontent.com/hoijui/JavaOSC/master/LICENSE&lt;/a>.</string>
    <string name="send_data">Send data</string>
    <string name="action_guide">Help</string>
    <string name="text_guide_headline">Help</string>
    <string name="text_guide">Depending on your phone, you have several sensors and values available.</string>
    <string name="text_available_sensors">Available Sensors</string>
    <string name="text_guide_multitouch">If you enable multitouch, each touchpoint will send its coordinates via OSC. The address is in the format /touch&lt;index&gt;, where index is a 1-based. The coordinates are sent as a list of 2 float values, X and Y and range from 0 to 1.</string>
    <string name="text_guide_multitouch_headline">Multitouch</string>
    <string name="text_guide_nfc">If your phone can read NFC tokens, then the value of these tokens will be sent to the OSC address /nfc.</string>
    <string name="text_guide_nfc_headline">Near Field Communication (NFC)</string>
    <string name="guide_max_range">Max range</string>
    <string name="guide_resolution">Resolution</string>
    <string name="guide_osc_address">OSC address</string>
    <string name="sensor_nfc">Near Field Communication</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_magnetic_field">Magnetic Field</string>
    <string name="sensor_orientation">Orientation</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_pressure">Pressure</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_proximity">Proximity</string>
    <string name="sensor_gravity">Gravity</string>
    <string name="sensor_linear_acceleration">Linear Acceleration</string>
    <string name="sensor_rotation_vector">Rotation Vector</string>
    <string name="sensor_relative_humidity">Relative Humidity</string>
    <string name="sensor_ambient_temperature">Ambient Temperature</string>
    <string name="sensor_magnetic_field_uncalibrated">Magnetic Field (uncalibrated)</string>
    <string name="sensor_game_rotation_vector">Game Rotation Vector (uncalibrated)</string>
    <string name="sensor_gyroscope_uncalibrated">Gyroscope (uncalibrated)</string>
    <string name="sensor_significant_motion">Significant Motion</string>
    <string name="sensor_step_counter">Step Counter</string>
    <string name="sensor_step_detector">Step Detector</string>
    <string name="sensor_geomagnetic_rotation_vector">Geomagnetic Rotation Vector</string>
    <string name="sensor_heartrate">Heartrate</string>
    <string name="sensor_tilt_detector">Tilt Detector</string>
    <string name="sensor_wake_gesture">Wake Gesture</string>
    <string name="sensor_glance_gesture">Glance Gesture</string>
    <string name="sensor_pick_up_gesture">Pick Up Gesture</string>
    <string name="sensor_wrist_tilt_gesture">Wrist Tilt Gesture</string>
    <string name="sensor_unknown">Unknown Sensor</string>
    <string name="text_guide_floatlist" >Sensor values are sent as a list of float values. Depending on the sensor, this can range from 1 to 16 values.</string>
    <string name="guide_dimensions" >Number of values</string>
    <string name="sensor_inclination" >Inclination</string>
</resources>
