<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/communication">
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="localhost"
            android:key="pref_comm_host"
            android:persistent="true"
            android:title="@string/host"/>
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="9000"
            android:key="pref_comm_port"
            android:numeric="integer"
            android:persistent="true"
            android:title="@string/port"/>
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="localhost"
            android:key="pref_comm_mqtt_host"
            android:persistent="true"
            android:title="@string/mqtt_host"/>
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="1883"
            android:key="pref_comm_mqtt_port"
            android:numeric="integer"
            android:persistent="true"
            android:title="@string/mqtt_port"/>
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="sensors2mqtt/"
            android:key="pref_comm_mqtt_prefix"
            android:persistent="true"
            android:title="@string/mqtt_prefix"/>
    </PreferenceCategory>
   <!-- <PreferenceCategory android:title="@string/sensors">
        <org.sensors2.common.preferences.ExtendedEditTextPreference
            android:defaultValue="0"
            android:key="pref_general_sensitivity"
            android:numeric="decimal"
            android:persistent="true"
            android:title="@string/sensitity"/>
    </PreferenceCategory>-->
</PreferenceScreen>